# Financial-analysis-assistant

./: .gitignore  package-lock.json
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 71e4798e1cec_initial_tables.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: balance_sheet.py  branch_analysis.py  cash_flow.py  expense.py  financial_summary.py  health_score.py  loss.py  profit.py  recommendations.py  report.py  revenue.py  risk.py  trend.py
backend/app/auth/: __init__.py  router.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  seed.py  session.py
backend/app/db/models/: __init__.py  audit_log.py  balance_sheet.py  branch.py  cash_flow.py  expense_breakdown.py  financial_periods.py  income_statement.py
backend/app/features/: __init__.py  repository.py  schemas.py  services.py
backend/app/intent/: detector.py  entities.py
backend/tests/api/: test_endpoints.py
backend/tests/intent/: test_detector.py
docs/: DEVELOPMENT_PLAN.txt  PHASE_A1_COMPLETION.md  api-contracts.md
docs/mock-responses/: balance-sheet.json  branch-analysis.json  cash-flow.json  expense.json  financial-summary.json  health-score.json  loss.json  profit.json  recommendations.json  report.json  revenue.json  risk.json  trend.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/types/: api.ts  domain.ts
model/: requirements.txt
model/architecture/: config.py
model/tokenizer/: corpus.txt
(+49 files in other folders)
